# ZFD

./: .gitignore  AL_AR_DUALITY_HYPOTHESIS.md  BIBLIOGRAPHY.md  CC_GLYPH_VALIDATION_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  FOLIO_INDEX.md  GETTING_STARTED.md  LICENSE  METHODOLOGY.md  PHASE3_OD_VERDICT.md  PHASE4_UPPER_CANOPY_VERDICT.md  PHASE5_PHARMA_VERDICT.md  PHASE7_PARSING_VERDICT.md  PHASE8_RECIPE_TRANSLATIONS.md  PHASE9_FOLIO_TRACKER.md  README.md  STATISTICS.md  The_Zuger_Functional_Decipherment_ZFD.docx  VALIDATION_RESULTS_JAN2026.md  WHY_GLAGOLITIC.md  folio_iiif_map.json  pyproject.toml  requirements.txt
02_Transcriptions/: ocr_lines.csv
03_Analysis_Data/: examples_operator_stem_suffix.csv
04_Reports/: Part1_Main.docx  Part2_Statistical_Analysis.docx  ZFD_Complete.docx  ZFD_PAPER_DRAFT_v1.md
05_Case_Studies/: CASE_STUDIES.md
06_Pipelines/: add_folio_images.py  build_unified_lexicon.py  coverage_v36b.py  coverage_v40.py  f_56_r_decipherment_update.py  process_all_folios.py  vms_replication_export.py  zfd_decoder_v2.py
08_Final_Proofs/: COVERAGE_REPORT_v3_6.md  COVERAGE_REPORT_v4_0.md  F88R_SCHOLARLY_PLATE_v1.md  PHARMACEUTICAL_MORPHEME_DICTIONARY.md  PHARMACEUTICAL_SECTION_COMPLETE.md  morpheme_dictionary.json  section_summary.json
09_CC_Instructions/: CC_BLIND_DECODE_FALSIFICATION_TEST.md  CC_BLIND_DECODE_V2_VOCABULARY_SPECIFICITY.md  CC_CATCHUP_CONTEXT.md  CC_LEXICON_V2_INTEGRATION.md  PALEOGRAPHIC_TRANSCRIPTION_SPEC.md  PHASE1_REDO_IMAGE_ANALYSIS.md  ZFD_DECODE_PIPELINE_CC_SPEC.md
10_Supplementary/: Appendix_B_Data_Tables.csv  (+7 more)
(+2570 files in other folders)
