[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lgn-eye"
version = "0.1.0"
description = "Software replication of LGN temporal attention from Gao et al. (2026)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "kornia>=0.7.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "snntorch>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
